fix: update stats urls with cache busting and dark mode support, robustness fix for 3d workflow

--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -21,4 +21,5 @@ jobs:
           git config user.email github-actions@github.com
           git add -A .
           git commit -m "generated 3d stats"
+          git pull --rebase
           git push
