--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,18 +14,27 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}
+          # Use the built-in GITHUB_TOKEN to avoid needing a manual secret
+          # Ensure you have enabled "Read and write permissions" in Repository Settings -> Actions -> General
+          token: ${{ secrets.GITHUB_TOKEN }}
+          
           # Options
           user: rkalbuqp
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: America/Sao_Paulo
+          
+          # Isometric Calendar (Contributions Graph)
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
+          
+          # Languages
           plugin_languages: yes
           plugin_languages_ignored: >-
             html, css
           plugin_languages_details: bytes-size, percentage
+          
+          # Achievements
           plugin_achievements: yes
           plugin_achievements_display: compact
           plugin_achievements_threshold: C
