--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -18,24 +18,30 @@ jobs:
           # Ensure you have enabled "Read and write permissions" in Repository Settings -> Actions -> General
           token: ${{ secrets.GITHUB_TOKEN }}
           
-          # Options
+          # Base configuration
           user: rkalbuqp
           template: classic
-          base: activity, community, repositories
+          base: repositories
           config_timezone: America/Sao_Paulo
+          config_display: large
+          config_padding: 0, 10%
           
           # Lines of code changed
           plugin_lines: yes
           
-          # Isometric Calendar (Contributions Graph)
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
+          # Coding Habits
+          plugin_habits: yes
+          plugin_habits_from: 200
+          plugin_habits_days: 14
+          plugin_habits_facts: yes
+          plugin_habits_charts: yes
           
           # Languages
           plugin_languages: yes
           plugin_languages_ignored: >-
             html, css
           plugin_languages_details: bytes-size, percentage
+          plugin_languages_limit: 8
           
           # Achievements
           plugin_achievements: yes
