--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,22 +12,14 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: 1. Metrics (Left) - Habits & Activity
+        uses: lowlighter/metrics@latest
         with:
-          # Use the built-in GITHUB_TOKEN to avoid needing a manual secret
-          # Ensure you have enabled "Read and write permissions" in Repository Settings -> Actions -> General
+          filename: metrics.left.svg
           token: ${{ secrets.GITHUB_TOKEN }}
-          
-          # Base configuration
-          user: rkalbuqp
-          template: classic
-          base: repositories
+          base: header, activity, community, repositories
           config_timezone: America/Sao_Paulo
-          config_display: large
-          config_padding: 0, 10%
-          
-          # Lines of code changed
-          plugin_lines: yes
+          config_order: base.header, base.activity+community, base.repositories, habits
           
           # Coding Habits
           plugin_habits: yes
@@ -36,10 +28,20 @@ jobs:
           plugin_habits_facts: yes
           plugin_habits_charts: yes
           
+          # Lines of code changed
+          plugin_lines: yes
+
+      - name: 2. Metrics (Right) - Languages & Achievements
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.right.svg
+          token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+          config_timezone: America/Sao_Paulo
+          
           # Languages
           plugin_languages: yes
-          plugin_languages_ignored: >-
-            html, css
+          plugin_languages_ignored: html, css
           plugin_languages_details: bytes-size, percentage
           plugin_languages_limit: 8
           
