--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,6 +21,10 @@ jobs:
           config_timezone: America/Sao_Paulo
           config_order: base.header, base.activity+community, base.repositories, habits
           
+          # Repositories configuration
+          repositories_forks: no
+          repositories_affiliations: owner, collaborator
+          
           # Coding Habits
           plugin_habits: yes
           plugin_habits_from: 200
@@ -41,7 +45,7 @@ jobs:
           
           # Languages
           plugin_languages: yes
-          plugin_languages_ignored: html, css
+          plugin_languages_ignored: html, css, javascript
           plugin_languages_details: bytes-size, percentage
           plugin_languages_limit: 8
           
