--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,11 +1,11 @@
 name: Metrics
 on:
   # Schedule daily updates
-  schedule: [{cron: "0 0 * * *"}]
+  schedule: [{ cron: "0 0 * * *" }]
   # (optional) Run workflow manually
   workflow_dispatch:
   # (optional) Run workflow when pushing on master/main
-  push: {branches: ["master", "main"]}
+  push: { branches: ["master", "main"] }
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -20,18 +20,17 @@ jobs:
           base: header, activity, community, repositories
           config_timezone: America/Sao_Paulo
           config_order: base.header, base.activity+community, base.repositories, habits
-          
+
           # Repositories configuration
-          repositories_forks: no
-          repositories_affiliations: owner, collaborator
-          
+          # Removed restrictive filters to ensure all repos are counted
+
           # Coding Habits
           plugin_habits: yes
           plugin_habits_from: 200
           plugin_habits_days: 14
           plugin_habits_facts: yes
           plugin_habits_charts: yes
-          
+
           # Lines of code changed
           plugin_lines: yes
 
@@ -42,13 +41,13 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           base: ""
           config_timezone: America/Sao_Paulo
-          
+
           # Languages
           plugin_languages: yes
-          plugin_languages_ignored: html, css, javascript
+          plugin_languages_ignored: html, css
           plugin_languages_details: bytes-size, percentage
           plugin_languages_limit: 8
-          
+
           # Achievements
           plugin_achievements: yes
           plugin_achievements_display: compact
